[package]
name = "tokio-pty-process-stream"
version = "0.1.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"

[dependencies]
component-future = "0.1"
futures = "0.1"
log = "0.4"
snafu = "0.5"
tokio = "0.1.22"
tokio-pty-process = "0.4"

[dev-dependencies]
crossterm = "0.11"
lazy_static = "1"
mio = "0.6"
regex = "1"
