[package]
name = "tokio-pty-process-stream"
version = "0.2.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"

description = "wraps tokio-pty-process in order to provide a simpler API as a single stream object"
license = "MIT"
repository = "https://git.tozt.net/tokio-pty-process-stream"
readme = "README.md"
keywords = ["pty", "futures"]
categories = ["asynchronous"]

[dependencies]
component-future = "0.1"
futures = "0.1"
log = "0.4"
snafu = "0.5"
tokio = "0.1.22"
tokio-pty-process = "0.4"
tokio-terminal-resize = "0.1"

[dev-dependencies]
crossterm = "0.11"
lazy_static = "1"
mio = "0.6"
regex = "1"
